[gd_scene load_steps=3 format=3 uid="uid://dgavmndrtv4"]

[ext_resource type="Script" path="res://Scripts/ActionsMenu.gd" id="2_u2p17"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fnjxa"]

[node name="PanelContainer" type="PanelContainer" node_paths=PackedStringArray("vertical_container")]
custom_minimum_size = Vector2(200, 40)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -25.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fnjxa")
script = ExtResource("2_u2p17")
vertical_container = NodePath("VBoxContainer")
pivot_position = Vector2(0.5, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="AttackButton" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="AttackButton" type="Button" parent="VBoxContainer/AttackButton"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ATTACK"

[node name="SpecialAttackButton" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="AttackButton" type="Button" parent="VBoxContainer/SpecialAttackButton"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ATTACK"

[node name="UseObjectButton" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="AttackButton" type="Button" parent="VBoxContainer/UseObjectButton"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ATTACK"

[node name="EndTurnButton" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2

[node name="AttackButton" type="Button" parent="VBoxContainer/EndTurnButton"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ATTACK"
